# whatawhat

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
data/logs/: app.2025-02-22  app.2025-02-25  app.2025-03-02
src/: daemon_main.rs  lib.rs  main.rs
src/api/: mod.rs
src/api/windows/: active_process.rs  mod.rs
src/cli/: daemon_path.rs  date.rs  mod.rs  process.rs  termination.rs  timeline.rs
src/cli/output/: analysis.rs  mod.rs  sliding_grouping.rs
src/daemon/: args.rs  mod.rs  pipeline_event.rs  shutdown.rs  update.rs
src/daemon/collection/: afk.rs  collector.rs  mod.rs  producer.rs
src/daemon/processing/: combined_processing.rs  local_save.rs  mod.rs  module.rs  save_module.rs
src/daemon/storage/: application_storage.rs  buffered_file_handle.rs  entities.rs  mod.rs  multi_factor.rs  record_event.rs  record_storage.rs  types.rs
src/daemon/update/: listener.rs  mod.rs
src/data_collection/: linux.rs  mod.rs  windows.rs
src/fs/: async_file_ext.rs  mod.rs  operations.rs
src/process/: mod.rs
src/server/: mod.rs  processing.rs  server_update.rs  test.rs
src/server/collection/: collector.rs  mod.rs
src/server/storage/: mod.rs  multi_factor.rs  record_event.rs  universal_reader_writer.rs
src/server/update/: listener.rs  mod.rs
src/utils/: clock.rs  date_provider.rs  dir.rs  logging.rs  mod.rs  percentage.rs  retry.rs  runtime.rs  time.rs
src/window_api/: mod.rs  win.rs  x11.rs
src/windows/: mod.rs
src/windows_api/: linux.rs  mod.rs  windows.rs
temp/: SendSignal.cpp  SendSignal.dsp  SendSignal.dsw  ct.py
