[package]
name = "process-detector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
cfg-if = "1.0.0"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.24", features = ["derive", "string" ] }
csv = "1.3.1"
env_logger = "0.11.6"
interprocess = { version = "2.2.2", features = ["tokio" ] }
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive", "rc", "std"] }
serde_json = "1.0.135"
sysinfo = "0.33.1"
tokio = { version = "1", features = ["full", "test-util"] }

[dependencies.windows]
version = "0.58.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_System_Console",
    "Win32_System_SystemInformation"

]
