[package]
name = "whatawhat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
async-backtrace = "0.2.7"
cfg-if = "1.0.0"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.24", features = ["derive", "string"] }
csv = "1.3.1"
dateparser = "0.2.1"
fs4 = { version = "0.12.0", features = ["tokio"] }
futures = "0.3.31"
interprocess = { version = "2.2.2", features = ["tokio"] }
pin-project = "1.1.10"
serde = { version = "1.0.217", features = ["derive", "rc", "std"] }
serde_json = "1.0.135"
sysinfo = "0.33.1"
tempfile = "3.17.1"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.13"
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
zstd = "0.13.3"

[target.'cfg(target_os = "linux")'.dependencies]
# x11 = { version = "2.21.0", features = ["xlib", "xss"] }
xcb = { version = "1.5.0", features = ["screensaver"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = [
  "Data_Xml_Dom",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_ProcessStatus",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Accessibility",
  "Win32_System_Console",
  "Win32_System_SystemInformation",

]

[dev-dependencies]
tempfile = "3.17.1"
